--- a/.gitignore
+++ b/.gitignore
@@ -16,7 +16,7 @@ target/
 .idea/
 
 # Except these files, which can be shared
-!.idea/workspace.xml
+.idea/workspace.xml
 !.idea/misc.xml
 !.idea/modules.xml
 !.idea/vcs.xml
